[gd_scene load_steps=4 format=3 uid="uid://bfluygdkrflia"]

[ext_resource type="Script" path="res://addons/fuku/control.gd" id="1_py5ir"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l0xa7"]
bg_color = Color(0.0823529, 0.835294, 0.6, 1)
border_width_left = 15
border_width_right = 15
border_color = Color(0.0823529, 0.835294, 0.6, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qsuog"]
bg_color = Color(0.0823529, 0.835294, 0.6, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color(0, 0, 0, 1)

[node name="Fuku" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_py5ir")

[node name="Header" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.111
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 2.07199
grow_horizontal = 2

[node name="HBoxContainer" type="VBoxContainer" parent="Header"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="Header/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CurrentModel" type="Label" parent="Header/HBoxContainer/HSplitContainer"]
layout_mode = 2
text = "Model:   "
horizontal_alignment = 1
vertical_alignment = 1

[node name="EditModel" type="LineEdit" parent="Header/HBoxContainer/HSplitContainer"]
layout_mode = 2
text = "deepseek-coder:33b"

[node name="HSplitContainer2" type="HSplitContainer" parent="Header/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CurrentContent" type="Label" parent="Header/HBoxContainer/HSplitContainer2"]
layout_mode = 2
text = "Content:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EditContent" type="LineEdit" parent="Header/HBoxContainer/HSplitContainer2"]
layout_mode = 2
text = "You are a expert Godot developer who prioritizes writing clean, straightforward code that is easy to understand and maintain. When providing explanations, keep them concise and focus on the essential points without unnecessary verbosity. Your goal is to convey complex concepts in a simple and digestible manner for Godot developers of all skill levels."

[node name="Body" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.007
anchor_top = 0.111
anchor_right = 1.0
anchor_bottom = 0.938
offset_left = -0.0640002
offset_top = 0.0719942
offset_right = -8.0
offset_bottom = 0.175985
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Body"]
layout_mode = 2

[node name="Label" type="Label" parent="Body/VBoxContainer"]
layout_mode = 2
text = "Model Answer:"

[node name="ModelAnswer" type="RichTextLabel" parent="Body/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
bbcode_enabled = true
selection_enabled = true

[node name="Footer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.007
anchor_top = 0.94
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.0640002
offset_top = -0.120037
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Footer"]
layout_mode = 2

[node name="Prompt" type="LineEdit" parent="Footer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Ask something here..."

[node name="AskButton" type="Button" parent="Footer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 9
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.545098, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_l0xa7")
theme_override_styles/hover = SubResource("StyleBoxFlat_qsuog")
text = "Go!"
